--- a/index.html
+++ b/index.html
@@ -5,36 +5,69 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Bootcamp</title>
+    <script src="https://kit.fontawesome.com/35b81b9f99.js" crossorigin="anonymous"></script>
 </head>
 <body>
+    <div style="
+            width: 550px;
+            padding: 15px;
+            margin: 50px auto;
+            font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;">
+    <h1>hello ngab</h1>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Rerum minus quisquam at. Laboriosam ratione magni modi aut. Illo minus nam culpa laudantium sunt inventore suscipit dignissimos obcaecati maiores, vitae omnis! Lorem ipsum dolor, sit amet consectetur adipisicing elit. Eveniet sint consectetur nobis perspiciatis nemo harum dicta beatae optio amet. Numquam id nam ea, magnam accusantium nisi aperiam nemo quisquam. Velit.</p>
+
+    <a href="https://youtu.be/0U7SBGBCoGs?t=68"> 
+        <button style="
+            color: white;
+            width: 100px;
+            height: 40px;
+            border-radius: 15px;
+            background-color: #000040;
+            ;"> Contact</button> <br><br>
+    </a>
+    <p>
+        Download CV <a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ" style="color: inherit; background-color: transparent; text-decoration: none;"> <i class="fa-solid fa-download"></i> </a> </p>
+
+    
+    </div>
+
+    <div style="
+        width: fit-content;
+        margin: 20px auto;
+        scale: 2 2;
+        
+        ">
+
+        <a href="https://github.com/pxlwa" style="color: inherit; background-color: transparent; text-decoration: none;">
+            <i class="fa-brands fa-github"></i>
+        </a>
+        <a href="https://www.linkedin.com/in/akbar-palwa-3b483a1a0" style="color: inherit; background-color: transparent; text-decoration: none;">
+            <i class="fa-brands fa-linkedin"></i>
+        </a>
+        <a href="https://instagram.com/pulangkebapak" style="color: inherit; background-color: transparent; text-decoration: none;">
+            <i class="fa-brands fa-instagram"></i>
+        </a>
+        <a href="https://twitter.com/kalahrank" style="color: inherit; background-color: transparent; text-decoration: none;">
+            <i class="fa-brands fa-twitter"></i>
+        </a>
+    </div>
+
+   
     <div style="
             border: 1px solid #000040;
             width: 350px;
             padding: 15px;
-            margin: 100px auto;
+            margin: 50px auto;
             box-shadow: 0 0 30px #dbdbdb;
+            font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
         ">  
             <div class="image">
                 <img src="assets/img/RATM.jpeg" alt="man" style="width: 100%; border-radius: 10px"/>
             </div>
-            <h1>Agung Kurniawan</h1>
-            <p style="color: grey;">Halo Saya Agung, Saya Seorang Web Developer Handal maseee</p>
+            <h1 style="text-align: center;">Akbar Palwa Ramadhani HZ</h1>
+            <p style="color: grey; text-align: center;">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Expedita eaque, modi nam recusandae ex itaque aperiam harum soluta commodi quia culpa cupiditate, possimus eius aut! Culpa non alias accusamus sed!</p>
 
-            <!--  -->
-            <table style="border: 1px solid #000040; width: 100%; text-align: center; border-collapse:collapse;">
-                <tr>
-                    <th style="border: 1px solid #000040;">Project Name</th>
-                    <th style="border: 1px solid #000040;">Year</th>
-                </tr>
-                <tr>
-                    <td style="border: 1px solid #000040;">Dumbways Mobile App</td>
-                    <td style="border: 1px solid #000040;">2023</td>
-                </tr>
-                <tr>
-                    <td style="border: 1px solid #000040;">Dumbways Web App</td>
-                    <td style="border: 1px solid #000040;">2022</td>
-                </tr>
-            </table>
+
         </div>
 </body>
 </html>
