revisi tugas day 1

--- a/index.html
+++ b/index.html
@@ -62,10 +62,10 @@
             font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
         ">  
             <div class="image">
-                <img src="assets/img/RATM.jpeg" alt="man" style="width: 100%; border-radius: 10px"/>
+                <img src="assets/img/e764ca59-8509-4ef4-8535-97ab8ff49313 2.JPG" alt="penggalikubur" style="width: 100%; border-radius: 10px"/>
             </div>
-            <h1 style="text-align: center;">Akbar Palwa Ramadhani HZ</h1>
-            <p style="color: grey; text-align: center;">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Expedita eaque, modi nam recusandae ex itaque aperiam harum soluta commodi quia culpa cupiditate, possimus eius aut! Culpa non alias accusamus sed!</p>
+            <h1 style="text-align: center; font-size: large;">Akbar Palwa Ramadhani HZ</h1>
+            <p style="color: grey; text-align: center;">FullStack Developer</p>
 
 
         </div>
