--- a/index.html
+++ b/index.html
@@ -39,13 +39,13 @@
         ">
 
         <a href="https://github.com/pxlwa" style="color: inherit; background-color: transparent; text-decoration: none;">
-            <i class="fa-brands fa-github"></i>
+            <i class="fa-brands fa-github">&ensp;</i>
         </a>
         <a href="https://www.linkedin.com/in/akbar-palwa-3b483a1a0" style="color: inherit; background-color: transparent; text-decoration: none;">
-            <i class="fa-brands fa-linkedin"></i>
+            <i class="fa-brands fa-linkedin">&ensp;</i>
         </a>
         <a href="https://instagram.com/pulangkebapak" style="color: inherit; background-color: transparent; text-decoration: none;">
-            <i class="fa-brands fa-instagram"></i>
+            <i class="fa-brands fa-instagram">&ensp;</i>
         </a>
         <a href="https://twitter.com/kalahrank" style="color: inherit; background-color: transparent; text-decoration: none;">
             <i class="fa-brands fa-twitter"></i>
