--- a/index.html
+++ b/index.html
@@ -1,73 +1,164 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Bootcamp</title>
-    <script src="https://kit.fontawesome.com/35b81b9f99.js" crossorigin="anonymous"></script>
-</head>
-<body>
-    <div style="
-            width: 550px;
-            padding: 15px;
-            margin: 50px auto;
-            font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;">
-    <h1>hello ngab</h1>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Rerum minus quisquam at. Laboriosam ratione magni modi aut. Illo minus nam culpa laudantium sunt inventore suscipit dignissimos obcaecati maiores, vitae omnis! Lorem ipsum dolor, sit amet consectetur adipisicing elit. Eveniet sint consectetur nobis perspiciatis nemo harum dicta beatae optio amet. Numquam id nam ea, magnam accusantium nisi aperiam nemo quisquam. Velit.</p>
-
-    <a href="https://youtu.be/0U7SBGBCoGs?t=68"> 
-        <button style="
-            color: white;
-            width: 100px;
-            height: 40px;
-            border-radius: 15px;
-            background-color: #000040;
-            ;"> Contact</button> <br><br>
-    </a>
-    <p>
-        Download CV <a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ" style="color: inherit; background-color: transparent; text-decoration: none;"> <i class="fa-solid fa-download"></i> </a> </p>
-
-    
-    </div>
-
-    <div style="
-        width: fit-content;
-        margin: 20px auto;
-        scale: 2 2;
-        
-        ">
-
-        <a href="https://github.com/pxlwa" style="color: inherit; background-color: transparent; text-decoration: none;">
-            <i class="fa-brands fa-github">&ensp;</i>
-        </a>
-        <a href="https://www.linkedin.com/in/akbar-palwa-3b483a1a0" style="color: inherit; background-color: transparent; text-decoration: none;">
-            <i class="fa-brands fa-linkedin">&ensp;</i>
-        </a>
-        <a href="https://instagram.com/pulangkebapak" style="color: inherit; background-color: transparent; text-decoration: none;">
-            <i class="fa-brands fa-instagram">&ensp;</i>
-        </a>
-        <a href="https://twitter.com/kalahrank" style="color: inherit; background-color: transparent; text-decoration: none;">
-            <i class="fa-brands fa-twitter"></i>
-        </a>
-    </div>
-
-   
-    <div style="
-            border: 1px solid #000040;
-            width: 350px;
-            padding: 15px;
-            margin: 50px auto;
-            box-shadow: 0 0 30px #dbdbdb;
-            font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
-        ">  
-            <div class="image">
-                <img src="assets/img/e764ca59-8509-4ef4-8535-97ab8ff49313 2.JPG" alt="penggalikubur" style="width: 100%; border-radius: 10px"/>
-            </div>
-            <h1 style="text-align: center; font-size: large;">Akbar Palwa Ramadhani HZ</h1>
-            <p style="color: grey; text-align: center;">FullStack Developer</p>
-
-
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Bootcamp Day 2</title>
+    <link href="assets/css/navbar.css" rel="stylesheet" />
+    <link href="assets/css/all.css" rel="stylesheet" />
+    <script
+      src="https://kit.fontawesome.com/35b81b9f99.js"
+      crossorigin="anonymous"
+    ></script>
+    <link
+      href="https://fonts.googleapis.com/css?family=Quicksand"
+      rel="stylesheet"
+    />
+  </head>
+  <body>
+    <!--start navbar-->
+    <header>
+      <nav>
+        <div class="left-side">
+          <a href="#">
+            <img src="assets/img/itulah.png" style="margin-top: 8px" />
+          </a>
+          <ul>
+            <li>
+              <a href="#" class="active">Home</a>
+            </li>
+            <li>
+              <a href="#" style="color: #fff">Blog</a>
+            </li>
+          </ul>
         </div>
-</body>
+
+        <div class="right-side">
+          <a href="contact-me.html"> Contact Me</a>
+        </div>
+      </nav>
+    </header>
+    <!--end navbar-->
+
+    <!--konten sampah-->
+    <section>
+      <div class="container">
+        <!--sisikiri-->
+        <div class="left-content">
+          <!--waweswos-->
+          <div class="wasweswos">
+            <h1 style="font-size: 30px; margin-bottom: 25px">
+              yuhuu wer wer werrrrr
+            </h1>
+            <br />
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Rerum
+              minus quisquam at. Laboriosam ratione magni modi aut. Illo minus
+              nam culpa laudantium sunt inventore suscipit dignissimos obcaecati
+              maiores, vitae omnis! Lorem ipsum dolor, sit amet consectetur
+              adipisicing elit. Eveniet sint consectetur nobis perspiciatis nemo
+              harum dicta beatae optio amet. Numquam id nam ea, magnam
+              accusantium nisi aperiam nemo quisquam. Velit. Lorem ipsum dolor
+              sit amet, consectetur adipisicing elit. Sequi accusamus fugiat
+              optio quia explicabo delectus omnis illum praesentium quae tempore
+              consectetur, placeat cumque magnam !
+            </p>
+          </div>
+          <!--wasweswos end-->
+
+          <!--link booekp-->
+          <div class="download">
+            <a href="https://youtu.be/0U7SBGBCoGs?t=68">
+              <button class="button">Contact</button>
+            </a>
+            &ensp;
+            <div class="link-cv">
+              <p>Download CV</p>
+              <a
+                href="https://www.youtube.com/watch?v=dQw4w9WgXcQ"
+                style="
+                  color: inherit;
+                  background-color: transparent;
+                  text-decoration: none;
+                "
+              >
+                <i class="fa-solid fa-download" style="color: #645cbb"></i>
+              </a>
+            </div>
+          </div>
+
+          <!--end link booekp-->
+
+          <!--socmedkillsbrain-->
+
+          <div style="width: fit-content; margin: 25px 0 0 90px; scale: 2 2">
+            <a
+              href="https://github.com/pxlwa"
+              style="
+                color: inherit;
+                background-color: transparent;
+                text-decoration: none;
+              "
+            >
+              <i class="fa-brands fa-github" style="color: #645cbb">&ensp;</i>
+            </a>
+            <a
+              href="https://www.linkedin.com/in/akbar-palwa-3b483a1a0"
+              style="
+                color: inherit;
+                background-color: transparent;
+                text-decoration: none;
+              "
+            >
+              <i class="fa-brands fa-linkedin" style="color: #645cbb">&ensp;</i>
+            </a>
+            <a
+              href="https://instagram.com/pulangkebapak"
+              style="
+                color: inherit;
+                background-color: transparent;
+                text-decoration: none;
+              "
+            >
+              <i class="fa-brands fa-instagram" style="color: #645cbb"
+                >&ensp;</i
+              >
+            </a>
+            <a
+              href="https://twitter.com/kalahrank"
+              style="
+                color: inherit;
+                background-color: transparent;
+                text-decoration: none;
+              "
+            >
+              <i class="fa-brands fa-twitter" style="color: #645cbb"></i>
+            </a>
+          </div>
+
+          <!--end socmedkillsbrain-->
+        </div>
+        <!--end sisikiri-->
+
+        <!--sisikanan-->
+        <div class="right-content">
+          <!--gambarraiku-->
+          <div class="gambar-raiku">
+            <img
+              src="assets/img/e764ca59-8509-4ef4-8535-97ab8ff49313 2.JPG"
+              alt="penggalikubur"
+              style="width: 100%; border-radius: 10px"
+            />
+            <h1 style="text-align: center; font-size: large">
+              Akbar Palwa Ramadhani HZ
+            </h1>
+            <p style="color: grey; text-align: center">FullStack Developer</p>
+          </div>
+        </div>
+        <!--end gambarraiku-->
+      </div>
+    </section>
+    <!--end kontensampah-->
+  </body>
 </html>
