--- a/contact-me.html
+++ b/contact-me.html
@@ -47,10 +47,11 @@
       <div>
         <form>
           <div>
+            <!--inputgaming-->
             <label for="name" style="font-size: 18px; font-weight: bold"
               >Name</label
             >
-            <!--inputgaming-->
+
             <input
               type="text"
               id="name"
@@ -148,10 +149,13 @@
           <!--end of inputgaming-->
 
           <div>
-            <button class="button">Submit</button>
+            <button class="button" type="button" onclick="getData()">
+              Submit
+            </button>
           </div>
         </form>
       </div>
     </section>
+    <script src="assets/js/script.js"></script>
   </body>
 </html>
