--- a/contact-me.html
+++ b/contact-me.html
@@ -49,12 +49,13 @@
           <div>
             <!--inputgaming-->
             <label for="name" style="font-size: 18px; font-weight: bold"
-              >Name</label
+              ><!--Name--></label
             >
 
             <input
               type="text"
               id="name"
+              placeholder="Nama"
               style="
                 width: 100%;
                 box-sizing: border-box;
@@ -69,11 +70,12 @@
 
           <div>
             <label for="email" style="font-size: 18px; font-weight: bold"
-              >Email</label
+              ><!--Email--></label
             >
             <input
               type="text"
               id="email"
+              placeholder="Email"
               style="
                 width: 100%;
                 box-sizing: border-box;
@@ -88,11 +90,12 @@
 
           <div>
             <label for="phone" style="font-size: 18px; font-weight: bold"
-              >Phone Number</label
+              ><!--Phone Number--></label
             >
             <input
               type="text"
               id="phone"
+              placeholder="Phone Number"
               style="
                 width: 100%;
                 box-sizing: border-box;
@@ -128,16 +131,17 @@
           </div>
 
           <div>
-            <label for="description" style="font-size: 18px; font-weight: bold"
+            <label for="description" style="opacity: 0%; font-size: 18px; font-weight: bold;"
               >Description</label
             >
             <textarea
               id="description"
+              placeholder="Description"
               style="
                 width: 100%;
                 box-sizing: border-box;
                 padding: 8px;
-                margin-top: 5px;
+                margin-top: -10px;
                 margin-bottom: 20px;
                 border-radius: 8px;
                 border: 1px solid #c4c4c4;
