--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
               <a href="#" class="active">Home</a>
             </li>
             <li>
-              <a href="#" style="color: #fff">Blog</a>
+              <a href="project.html" style="color: #fff">Project</a>
             </li>
           </ul>
         </div>
