--- a/contact-me.html
+++ b/contact-me.html
@@ -27,10 +27,10 @@
           </a>
           <ul>
             <li>
-              <a href="index.html" style="color: #fff">Home</a>
+              <a href="index.html">Home</a>
             </li>
             <li>
-              <a href="#" style="color: #fff">Blog</a>
+              <a href="project.html">Project</a>
             </li>
           </ul>
         </div>
@@ -131,7 +131,9 @@
           </div>
 
           <div>
-            <label for="description" style="opacity: 0%; font-size: 18px; font-weight: bold;"
+            <label
+              for="description"
+              style="opacity: 0%; font-size: 18px; font-weight: bold"
               >Description</label
             >
             <textarea
