--- a/project.html
+++ b/project.html
@@ -7,6 +7,7 @@
     <title>My Project</title>
     <link href="assets/css/navbar.css" rel="stylesheet" />
     <link href="assets/css/all.css" rel="stylesheet" />
+    <link href="assets/css/style.css" />
     <script
       src="https://kit.fontawesome.com/35b81b9f99.js"
       crossorigin="anonymous"
@@ -15,30 +16,62 @@
       href="https://fonts.googleapis.com/css?family=Quicksand"
       rel="stylesheet"
     />
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD"
+      crossorigin="anonymous"
+    />
   </head>
   <body>
     <!--start navbar-->
-    <header>
-      <nav>
-        <div class="left-side">
-          <a href="#">
-            <img src="assets/img/itulah.png" style="margin-top: 8px" />
+    <div>
+      <nav class="navbar navbar-expand-lg bg-body-tertiary px-5">
+        <div class="container-fluid">
+          <a class="navbar-brand" href="index.html">
+            <img src="assets/img/itulah.png" />
           </a>
-          <ul>
-            <li>
-              <a href="index.html" style="color: #fff">Home</a>
-            </li>
-            <li>
-              <a href="#" class="active">Project</a>
-            </li>
-          </ul>
-        </div>
-
-        <div class="right-side">
-          <a href="contact-me.html"> Contact Me</a>
+          <button
+            class="navbar-toggler"
+            type="button"
+            data-bs-toggle="collapse"
+            data-bs-target="#navbarSupportedContent"
+            aria-controls="navbarSupportedContent"
+            aria-expanded="false"
+            aria-label="Toggle navigation"
+          >
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          <div class="collapse navbar-collapse" id="navbarSupportedContent">
+            <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+              <li class="nav-item">
+                <a class="nav-link" href="index.html">Home</a>
+              </li>
+              <li class="nav-item">
+                <a
+                  class="nav-link active"
+                  aria-current="page"
+                  href="project.html"
+                  >Project</a
+                >
+              </li>
+            </ul>
+            <form
+              class="d-flex btnSubmit"
+              role="search"
+              style="color: #645cbb; border-radius: 5px"
+            >
+              <a
+                class="btn btnSubmit btn-outline-dark"
+                href="contact-me.html"
+                role="button"
+                >Contact Me</a
+              >
+            </form>
+          </div>
         </div>
       </nav>
-    </header>
+    </div>
     <!--end navbar-->
 
     <!--content-->
@@ -51,177 +84,133 @@
 
             <!--project name-->
             <div>
-              <div>
-                <label
-                  for="projectName"
-                  style="font-size: 18px; font-weight: bold"
-                ></label>
-
+              <div class="form-floating mb-3">
                 <input
-                  type="text"
-                  id="name"
-                  placeholder="Project Name"
-                  style="
-                    width: 100%;
-                    box-sizing: border-box;
-                    padding: 8px;
-                    margin-top: 5px;
-                    margin-bottom: 20px;
-                    border-radius: 8px;
-                    border: 1px solid #c4c4c4;
-                  "
+                  type="name"
+                  class="form-control"
+                  id="floatingInput"
+                  placeholder="Nama Project"
                 />
+                <label for="floatingInput">Nama Project</label>
               </div>
+
               <!--end of projectname-->
 
               <!--start date-->
 
-              <div class="date">
-                <label
-                  for="date"
-                  style="font-size: 18px; font-weight: bold"
-                ></label>
-                <input
-                  type="date"
-                  id="startDate"
-                  placeholder="Start Date"
-                  value=""
-                  min="2010-01-01"
-                  max="2030-12-31"
-                  style="
-                    width: 50%;
-
-                    box-sizing: border-box;
-                    padding: 8px;
-                    margin-top: 5px;
-                    margin-bottom: 20px;
-                    border-radius: 8px;
-                    border: 1px solid #c4c4c4;
-                  "
-                /><label
-                  for="endDate"
-                  style="font-size: 18px; font-weight: bold"
-                ></label>
-
-                <input
-                  type="date"
-                  id="endDate"
-                  placeholder="End Date"
-                  value=""
-                  min="2010-01-01"
-                  max="2030-12-31"
-                  style="
-                    width: 50%;
-                    box-sizing: border-box;
-                    padding: 8px;
-                    margin-top: 5px;
-                    margin-bottom: 20px;
-                    border-radius: 8px;
-                    border: 1px solid #c4c4c4;
-                  "
-                />
-
-                <!--end of startdate-->
-
-                <!--enddate-->
+              <div>
+                <div class="row">
+                  <div class="form-floating mb-3 col">
+                    <input
+                      type="date"
+                      class="form-control"
+                      id="floatingInput"
+                      placeholder="Start Date"
+                    />
+                    <label for="floatingInput" class="ps-4">Start Date</label>
+                  </div>
+                  <!--end of startdate-->
+                  <!--enddate-->
+                  <div class="form-floating mb-3 col">
+                    <input
+                      type="date"
+                      class="form-control"
+                      id="floatingInput"
+                      placeholder="End Date"
+                    />
+                    <label for="floatingInput" class="ps-4">End Date</label>
+                  </div>
+                </div>
               </div>
 
               <!--end of enddate-->
 
               <!--description-->
-              <div>
-                <label
-                  for="description"
-                  style="opacity: 0%; font-size: 18px; font-weight: bold"
-                  >Description</label
-                >
+              <div class="form-floating mb-3" style="resize: none" !important>
                 <textarea
-                  id="description"
-                  placeholder="Description"
-                  style="
-                    width: 100%;
-                    box-sizing: border-box;
-                    padding: 8px;
-                    margin-top: -10px;
-                    margin-bottom: 20px;
-                    border-radius: 8px;
-                    border: 1px solid #c4c4c4;
-                    height: 100px;
-                    resize: none;
-                  "
+                  class="form-control"
+                  placeholder="Leave your description here"
+                  id="floatingTextarea2"
+                  style="height: 100px"
                 ></textarea>
+                <label for="floatingTextarea2">Description</label>
               </div>
               <!--end ofdescription-->
 
               <!--checkboxs-->
-              <div class="projectTech">
-                <label for="tech">Technologies</label>
-                <div class="technologiesList">
-                  <div>
+              <div>
+                <div class="row ps-3">
+                  <div class="form-check col">
                     <input
+                      class="form-check-input"
                       type="checkbox"
-                      name="react"
-                      id="react"
-                      value="React Js"
-                      class="checkbox"
+                      value=""
+                      id="flexCheckDefault"
                     />
-                    <label for="react">React Js</label>
-                  </div>
-                  <div>
-                    <input
-                      type="checkbox"
-                      name="node"
-                      id="node"
-                      value="Node Js"
-                      class="checkbox"
-                    />
-                    <label for="node">Node Js</label>
+                    <label class="form-check-label" for="flexCheckDefault">
+                      Javascript
+                    </label>
                   </div>
 
-                  <div>
+                  <div class="form-check col">
                     <input
+                      class="form-check-input"
                       type="checkbox"
-                      name="javascript"
-                      id="javascript"
-                      value="Javascript"
-                      class="checkbox"
+                      value=""
+                      id="flexCheckDefault"
                     />
-                    <label for="javascript">Javascript</label>
+                    <label class="form-check-label" for="flexCheckDefault">
+                      GOLang
+                    </label>
                   </div>
-                  <div>
+                </div>
+
+                <div class="row ps-3">
+                  <div class="form-check col">
                     <input
+                      class="form-check-input"
                       type="checkbox"
-                      name="angular"
-                      id="angular"
-                      value="Angular"
-                      class="checkbox"
+                      value=""
+                      id="flexCheckDefault"
                     />
-                    <label for="angular">Angular</label>
+                    <label class="form-check-label" for="flexCheckDefault">
+                      CSS
+                    </label>
+                  </div>
+
+                  <div class="form-check col">
+                    <input
+                      class="form-check-input"
+                      type="checkbox"
+                      value=""
+                      id="flexCheckDefault"
+                    />
+                    <label class="form-check-label" for="flexCheckDefault">
+                      HTML
+                    </label>
                   </div>
                 </div>
               </div>
               <!--end ofcheckboxs-->
-              <!--thumbnail-->
-              <div class="projectThumbnail" style="margin-top: 20px">
-                <label for="image">Upload Image</label>
+
+              <!--file input-->
+              <div class="mb-3 mt-3">
+                <label for="formFile" class="form-label ps-1"
+                  >Choose Your File</label
+                >
                 <input
+                  class="form-control"
                   type="file"
-                  name="image"
-                  id="image"
-                  accept="image/png, image/gif, image/jpeg"
-                  required
+                  id="formFile"
+                  accept=".png, .jpg, .jpeg"
                 />
               </div>
 
-              <!--end ofthumbnail-->
+              <!--end offileinput-->
+
               <!--button-->
               <div>
-                <button
-                  class="button"
-                  type="button"
-                  onclick="getData()"
-                  style="margin-top: 20px"
-                >
+                <button class="button" type="button" onclick="getData()">
                   Submit
                 </button>
               </div>
@@ -235,6 +224,11 @@
     </div>
 
     <!--end of content-->
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN"
+      crossorigin="anonymous"
+    ></script>
     <script src="assets/js/script.js"></script>
   </body>
 </html>
