--- a/index.html
+++ b/index.html
@@ -15,35 +15,64 @@
       href="https://fonts.googleapis.com/css?family=Quicksand"
       rel="stylesheet"
     />
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD"
+      crossorigin="anonymous"
+    />
   </head>
   <body>
     <!--start navbar-->
-    <header>
-      <nav>
-        <div class="left-side">
-          <a href="#">
-            <img src="assets/img/itulah.png" style="margin-top: 8px" />
+    <div>
+      <nav class="navbar navbar-expand-lg bg-body-tertiary px-5">
+        <div class="container-fluid">
+          <a class="navbar-brand" href="index.html">
+            <img src="assets/img/itulah.png" />
           </a>
-          <ul>
-            <li>
-              <a href="#" class="active">Home</a>
-            </li>
-            <li>
-              <a href="project.html" style="color: #fff">Project</a>
-            </li>
-          </ul>
-        </div>
-
-        <div class="right-side">
-          <a href="contact-me.html"> Contact Me</a>
+          <button
+            class="navbar-toggler"
+            type="button"
+            data-bs-toggle="collapse"
+            data-bs-target="#navbarSupportedContent"
+            aria-controls="navbarSupportedContent"
+            aria-expanded="false"
+            aria-label="Toggle navigation"
+          >
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          <div class="collapse navbar-collapse" id="navbarSupportedContent">
+            <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+              <li class="nav-item">
+                <a class="nav-link active" href="index.html">Home</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" aria-current="page" href="project.html"
+                  >Project</a
+                >
+              </li>
+            </ul>
+            <form
+              class="d-flex btnSubmit"
+              role="search"
+              style="color: #645cbb; border-radius: 5px"
+            >
+              <a
+                class="btn btnSubmit btn-outline-dark"
+                href="contact-me.html"
+                role="button"
+                >Contact Me</a
+              >
+            </form>
+          </div>
         </div>
       </nav>
-    </header>
+    </div>
     <!--end navbar-->
 
     <!--konten sampah-->
     <section>
-      <div class="container">
+      <div class="container mx-5">
         <!--sisikiri-->
         <div class="left-content">
           <!--waweswos-->
@@ -69,11 +98,14 @@
 
           <!--link booekp-->
           <div class="download">
-            <a href="contact-me.html">
-              <button class="button">Contact</button>
-            </a>
-            &ensp;
-            <div class="link-cv">
+            <a
+              class="btn btnSubmit btn-primary ms-5 me-3"
+              href="contact-me.html"
+              role="button"
+              >Contact Me</a
+            >
+
+            <div class="link-cv mt-3">
               <p>Download CV</p>
               <a
                 href="https://www.youtube.com/watch?v=dQw4w9WgXcQ"
@@ -83,7 +115,10 @@
                   text-decoration: none;
                 "
               >
-                <i class="fa-solid fa-download" style="color: #645cbb"></i>
+                <i
+                  class="fa-solid fa-download pb-4 ms-2"
+                  style="color: #645cbb"
+                ></i>
               </a>
             </div>
           </div>
@@ -144,16 +179,16 @@
         <!--sisikanan-->
         <div class="right-content">
           <!--gambarraiku-->
-          <div class="gambar-raiku">
+          <div class="card" style="width: 18rem">
             <img
               src="assets/img/e764ca59-8509-4ef4-8535-97ab8ff49313 2.JPG"
-              alt="penggalikubur"
-              style="width: 100%; border-radius: 10px"
+              class="card-img-top"
+              alt="..."
             />
-            <h1 style="text-align: center; font-size: large">
-              Akbar Palwa Ramadhani HZ
-            </h1>
-            <p style="color: grey; text-align: center">FullStack Developer</p>
+            <div class="card-body">
+              <h5 class="card-title">Akbar Palwa Ramadhani HZ</h5>
+              <p class="card-text">muntahbeling</p>
+            </div>
           </div>
         </div>
         <!--end gambarraiku-->
@@ -161,4 +196,9 @@
     </section>
     <!--end kontensampah-->
   </body>
+  <script
+    src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN"
+    crossorigin="anonymous"
+  ></script>
 </html>
