--- a/contact-me.html
+++ b/contact-me.html
@@ -11,35 +11,60 @@
       href="https://fonts.googleapis.com/css?family=Quicksand"
       rel="stylesheet"
     />
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD"
+      crossorigin="anonymous"
+    />
   </head>
 
   <body>
     <!--navbar-->
-    <header>
-      <nav>
-        <div class="left-side">
-          <a href="index.html">
-            <img
-              src="assets/img/itulah.png"
-              style="margin-top: 8px"
-              alt="logo"
-            />
+    <div>
+      <nav class="navbar navbar-expand-lg bg-body-tertiary px-5">
+        <div class="container-fluid">
+          <a class="navbar-brand" href="index.html">
+            <img src="assets/img/itulah.png" />
           </a>
-          <ul>
-            <li>
-              <a href="index.html">Home</a>
-            </li>
-            <li>
-              <a href="project.html">Project</a>
-            </li>
-          </ul>
-        </div>
-
-        <div class="right-side">
-          <a href="contact-me.html"> Contact Me</a>
+          <button
+            class="navbar-toggler"
+            type="button"
+            data-bs-toggle="collapse"
+            data-bs-target="#navbarSupportedContent"
+            aria-controls="navbarSupportedContent"
+            aria-expanded="false"
+            aria-label="Toggle navigation"
+          >
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          <div class="collapse navbar-collapse" id="navbarSupportedContent">
+            <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+              <li class="nav-item">
+                <a class="nav-link active" href="index.html">Home</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" aria-current="page" href="project.html"
+                  >Project</a
+                >
+              </li>
+            </ul>
+            <form
+              class="d-flex btnSubmit"
+              role="search"
+              style="color: #645cbb; border-radius: 5px"
+            >
+              <a
+                class="btn btnSubmit btn-outline-dark"
+                href="contact-me.html"
+                role="button"
+                >Contact Me</a
+              >
+            </form>
+          </div>
         </div>
       </nav>
-    </header>
+    </div>
     <!--end of navbar-->
 
     <!--konten-->
@@ -162,6 +187,11 @@
         </form>
       </div>
     </section>
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN"
+      crossorigin="anonymous"
+    ></script>
     <script src="assets/js/script.js"></script>
   </body>
 </html>
